--- a/package.json
+++ b/package.json
@@ -7,21 +7,19 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.66.0",
-    "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
     "aws-cdk": "1.66.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
     "@aws-cdk/core": "1.66.0",
+    "@aws-cdk/aws-dynamodb": "1.66.0",
+    "@aws-cdk/aws-lambda": "1.66.0",
+    "@aws-cdk/aws-s3": "1.66.0",
     "source-map-support": "^0.5.16"
   }
 }
