--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "workspaces": {
     "packages": [
       "01-setup",
-      "02-failed-update"
+      "02-failed-update",
+      "03-successful-update-step-1"
     ]
   }
 }
