--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "packages": [
       "01-setup",
       "02-failed-update",
+      "03-synthetic-exports",
       "03-successful-update-step-1",
       "04-successful-update-step-2"
     ]
