Add a different way of doing part 4 - cleaning up the exports.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "02-failed-update",
       "03-synthetic-exports",
       "03-successful-update-step-1",
+      "04-exports-cleanup",
       "04-successful-update-step-2"
     ]
   }
