--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
       "01-setup",
       "02-failed-update",
       "03-synthetic-exports",
-      "03-successful-update-step-1",
-      "04-exports-cleanup",
-      "04-successful-update-step-2"
+      "04-exports-cleanup"
     ]
   }
 }
